<?xml version="1.0" encoding="utf-8"?>
<ScrollView
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/l1"
        android:onClick="b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/police"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l2"
        android:onClick="b2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/ambulance"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/l3"
        android:onClick="b3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic3"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/fire_fighting"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l4"
        android:onClick="b4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic4"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/water"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l5"
        android:onClick="b5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic5"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/gas"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l6"
        android:onClick="b6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic6"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/electricity"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l7"
        android:onClick="b7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic7"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/highways"
            android:textSize="35sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/l8"
        android:onClick="b8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:layout_margin="5dp"
        android:background="@color/colorAccent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/pic8"
            android:contentDescription="TODO" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Communications"
            android:textSize="30sp"
            android:textStyle="bold"
            android:gravity="center"/>

    </LinearLayout>

</LinearLayout>
</ScrollView>